--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Rock Gym Routs</title>
+    <title>Todo App</title>
   </head>
   <body>
   <script type="text/javascript" src="app.js"></script></body>
